refactor: Renumeración de archivos en .cursor/rules y actualización de referencias
- Renombrados todos los archivos en .cursor/rules/ con numeración secuencial 01-14 según orden de prioridad:
  - 01-project-context.md (antes 00-project-context.md)
  - 02-mvp-entregables.md (antes 01-mvp-entregables.md)
  - 03-general-quality.md (antes 00-general-quality.md)
  - 04-custom-rules.md (antes 00-custom-rules.md)
  - 05-backend-policy.md (antes 00-backend-policy.md)
  - 06-api-contract.md (antes 01-api-contract.md)
  - 07-frontend-norms.md (antes 02-frontend-norms.md)
  - 08-security-sessions-tokens.md (antes 02-security-sessions-tokens.md)
  - 09-data-access-orm-sql.md (antes 03-data-access-orm-sql.md)
  - 10-i18n-and-testid.md (antes 03-i18n-and-testid.md)
  - 11-playwright-testing-rules.md (antes 06-playwright-testing-rules.md)
  - 12-ticketing-domain.md (antes 04-ticketing-domain.md)
  - 13-user-story-to-task-breakdown.md (antes 12-user-story-to-task-breakdown.md)
  - 14-dbml-sync-rule.md (antes 13-dbml-sync-rule.md)

- Actualizadas todas las referencias en documentación:
  - README.md
  - _MANUAL-PROGRAMADOR.MD
  - PROMPTS/04 - Prompts HU a Tareas.md
  - docs/backend/PLAYBOOK_BACKEND_LARAVEL.md
  - docs/frontend/*.md
  - docs/api/CONTRATO_BASE.md
  - specs/contracts/response-envelope.md
  - database/modelo-datos.dbml
  - database/README.md
  - Y otros archivos de documentación

Orden de prioridad: contexto → MVP → calidad → backend → frontend → testing → dominio → herramientas

--- a/docs/frontend/i18n.md
+++ b/docs/frontend/i18n.md
@@ -529,7 +529,7 @@ jest.mock('react-i18next', () => ({
 ## Referencias
 
 - `docs/frontend/frontend-specifications.md` - Especificaciones generales
-- `.cursor/rules/03-i18n-and-testid.mdc` - Reglas de i18n y test-ids
+- `.cursor/rules/10-i18n-and-testid.md` - Reglas de i18n y test-ids
 
 ---
 
